# Face_Recognition_Tool

./: .gitignore  README.md  attendance.py  main.py  pyproject.toml
output/: data.csv  encodings.pkl
