[tool.poetry]
name = "face-recognition-tool"
version = "0.1.0"
description = ""
authors = ["VIET-GITL <viet.info.43@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pathlib = "^1.0.1"
opencv-python = "^4.10.0.84"
imgbeddings = "^0.1.0"
psycopg2-binary = "^2.9.9"
numpy = "^1.0.0"
cmake = "^3.29.5.1"
dlib = {path = "D:/Downloads/Dlib_Windows_Python3.x-main/Dlib_Windows_Python3.x-main/dlib-19.22.99-cp310-cp310-win_amd64.whl"}
face-recognition = "^1.3.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
